# Deeztracker-Mobile

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  LICENSE  README.md  build_log.txt  local.properties  settings.gradle.kts
.github/workflows/: android-release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/crowstar/deeztrackermobile/: DeeztrackerApplication.kt  MainActivity.kt
app/src/main/java/com/crowstar/deeztrackermobile/data/model/: Album.kt  Track.kt
app/src/main/java/com/crowstar/deeztrackermobile/di/: AppModule.kt  LyricsNetworkModule.kt  NetworkModule.kt
app/src/main/java/com/crowstar/deeztrackermobile/features/deezer/: DeezerApiService.kt  DeezerModels.kt  (+1 more)
app/src/main/java/com/crowstar/deeztrackermobile/navigation/: AppNavigation.kt
app/src/main/java/com/crowstar/deeztrackermobile/player/: PlayerManager.kt
app/src/main/res/drawable/: ic_launcher_background.xml  splash_background.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-es/: strings.xml
rusteer/: Cargo.toml
rusteer/src/: bindings.rs  lib.rs  rusteer.rs  streaming.rs
rusteer/src/api/: gateway.rs
screens/album_details/: code.html
screens/app_settings/: code.html
screens/artist_profile/: code.html
screens/deeztracker_login/: code.html
screens/local_albums/: code.html
screens/local_artists/: code.html
screens/local_library/: code.html
screens/local_playlist/: code.html
screens/music_search_hub/: code.html
screens/now_playing/: code.html
screens/playlist_view/: code.html
(+101 files in other folders)
