[package]
name = "rusteer"
version = "2.0.0"
edition = "2021"
description = "Rust implementation of Deezer track fetching API"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"
required-features = ["uniffi/cli"]

[dependencies]
# HTTP client with cookie support
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "stream", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Cryptography
md-5 = "0.10"
sha1 = "0.10"
blowfish = "0.9"
aes = "0.8"
ctr = "0.9"
hex = "0.4"
cipher = "0.4"
byteorder = "1.5"

# Logging
tracing = "0.1"

# Audio metadata tagging
lofty = "0.22"
clap = { version = "4.4", features = ["derive", "env"] }
uniffi = { version = "0.28", features = ["tokio", "cli"] }
once_cell = "1.21.4"
tokio-stream = "0.1.18"
android_logger = "0.15.1"
log = "0.4.29"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
